--- a/mod2.html
+++ b/mod2.html
@@ -36,12 +36,12 @@ ul {
     background-color: orange;
 }
 
-#pork {
+#beef {
     background-color: yellow;
 }
 
-#steak {
-    background-color: orchid;
+#sushi {
+    background-color: purple;
 }
 
 
